:sparkles: feat (subscription_plans): Generate mp subscription link

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ addopts = --strict-markers
 markers =
     wip: for work in progress tests
     integration: tests with external dependencies
+    external: tests with external dependencies (not our services)
