--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pytest-django==3.9.0
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.24.0
+responses==0.13.3
 s3transfer==0.3.0
 six==1.13.0
 sqlparse==0.3.0
