fix: standard pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,164 +1,4 @@
----
-stages:
-  - syntax
-  - test
-  - build
-  - release
-  - docker-build
-  - post-test
-
-image: docker:19.03.1
-services:
-  - docker:19.03.1-dind
-    
-variables:
-  API_IMAGE_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
-  CONTAINER_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH
-  DOCKER_HOST: tcp://docker:2375
-  DOCKER_TLS_CERTDIR: ""
-  CI_RUNNER_REPO: registry.gitlab.com/xcapit/infra/ci-runner
-  CI_RUNNER_TAG: v1.0.0
-  HADOLINT_REPO: hadolint/hadolint
-  HADOLINT_TAG: v2.0.0-alpine
-  PYTHON_VERSION: "3.8"
-  SRC_DIR: "."  # Indicar aqui donde esta el src code, puede ser indicado en las vars de gitlab
-  
-###########################################################################
-###########################################################################
-### Templates
-
-### Syntax check
-.syntax-check: &syntax-check
-  stage: syntax
-  tags:
-    - coreinfra
-  image: python:${PYTHON_VERSION}
-  cache:
-    untracked: true
-    key: ${CI_COMMIT_REF_SLUG}
-    paths:
-      - ~/.cache/pip/
-  before_script:
-    - cd ${SRC_DIR}
-    - python -V
-    - pip install -r requirements.txt
-  script:
-    - python -m py_compile *.py
-  allow_failure: true
-
-### Django pytest
-.django-pytest: &django-pytest
-  stage: test
-  image: python:${PYTHON_VERSION}
-  services:
-    - name: postgres:12.0
-      alias: postgres-api-app
-  cache:
-    untracked: true
-    key: ${CI_COMMIT_REF_SLUG}
-    paths:
-      - ~/.cache/pip/
-  tags:
-    - coreinfra    
-  before_script:
-    - cd ${SRC_DIR}
-    - python -V
-    - pip install -r requirements.txt
-  script:
-    - coverage run -m pytest
-    - coverage report -m
-
-### Django smoke test
-.django-smoke-test: &django-smoke-test
-  stage: post-test
-  image: $CONTAINER_IMAGE:$CI_COMMIT_REF_NAME
-  services:
-    - name: postgres:12.0
-      alias: postgres-api-app
-  tags:
-    - coreinfra
-  
-  script:
-    - python ${SRC_DIR}/manage.py test
-
-### Docker lint
-.docker-lint: &docker-lint
-  stage: syntax
-  image: "${HADOLINT_REPO}:${HADOLINT_TAG}"
-  before_script:
-    - hadolint --version
-    - cd ${SRC_DIR}
-  tags:
-    - coreinfra
-  script:
-    - hadolint --ignore DL3018 --ignore DL3006 --ignore DL3003 --ignore DL3013 --ignore DL3007 --ignore DL3002 --ignore DL3008 --ignore DL3042 Dockerfile
-
-### Semantic release
-.semantic-release: &semantic-release
-  stage: release
-  image: "${CI_RUNNER_REPO}:${CI_RUNNER_TAG}"
-  tags:
-    - coreinfra
-
-###########################################################################
-###########################################################################
-### Stages
-
-# # Test
-Docker Lint:
-  <<: *docker-lint
-  rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "develop"'
-
-### Syntax check
-Syntax checking:
-  <<: *syntax-check
-  rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "develop"'
-
-### pytest
-Django pytest:
-  <<: *django-pytest
-  rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "develop"'
-
-### Build
-Build docker image:
-  stage: docker-build
-  tags:
-    - coreinfra
-  before_script:
-    - cd ${SRC_DIR}
-  script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
-    - docker build --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG .
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
-  only:
-    - tags
-
-# # Release
-Release Master:
-  <<: *semantic-release
-  only:
-    refs:
-    - master
-  script:
-    - npx semantic-release -p "@semantic-release/commit-analyzer" "@semantic-release/changelog" "@semantic-release/git" 
-
-Release Develop:
-  <<: *semantic-release
-  only:
-    refs:
-    - develop
-  script:
-    - npx semantic-release --tag-format ${CI_COMMIT_BRANCH}-\${version} -p "@semantic-release/commit-analyzer" "@semantic-release/changelog" "@semantic-release/git" 
-
-### Smoke test sobre la imagen recien creada
-Smoke test:
-  <<: *django-smoke-test
-  rules:
-    - if: $CI_COMMIT_MESSAGE =~ /^\[build\]/
-    - when: never
+include:
+  - project: 'xcapit/infra/pipeline-templates'
+    ref: master
+    file: 'django-pipeline.yaml'
