--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,8 @@ cache:
     - pytest --junitxml=$CI_PROJECT_DIR/report.xml
     - coverage run -m pytest
     - coverage report -m
+  after_scripts:
+    - coveralls
   artifacts:
     when: always
     reports:
