--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,34 @@ asgiref==3.2.3
 attrs==19.3.0
 boto3==1.11.2
 botocore==1.14.2
+cachetools==4.2.2
 certifi==2020.6.20
 chardet==3.0.4
 coverage==5.2.1
+coveralls==3.3.1
 Django==3.0.2
 django-amazon-ses==2.1.1
 django-prometheus==2.1.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
+docopt==0.6.2
 docutils==0.15.2
-google_auth==1.30.0
+google-auth==1.30.0
 gunicorn==20.0.4
 hashids==1.2.0
 idna==2.10
 iniconfig==1.0.0
 jmespath==0.9.4
 more-itertools==8.4.0
+numpy==1.21.3
 packaging==20.4
+pandas==1.3.4
 pluggy==0.13.1
 prometheus-client==0.8.0
-psycopg2==2.8.4
+psycopg2-binary==2.8.4
 py==1.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==6.0.0
@@ -31,11 +38,10 @@ python-dateutil==2.8.1
 pytz==2019.3
 requests==2.24.0
 responses==0.10.15
+rsa==4.7.2
 s3transfer==0.3.0
+sentry-sdk==1.1.0
 six==1.13.0
 sqlparse==0.3.0
 toml==0.10.1
 urllib3==1.25.7
-sentry-sdk==1.1.0
-pandas==1.3.4
-numpy==1.21.3
