--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
+env =
+    NEW_CAMPAIGN = 2021-04-04T21:31:00.00Z
+    OLD_CAMPAIGN = 2021-04-04T21:30:00.00Z
 DJANGO_SETTINGS_MODULE = api_app.test_settings
 python_files = tests.py test_*.py *_tests.py
 addopts = --strict-markers
