--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==6.0.0
 pytest-django==3.9.0
+pytest-env==0.6.2
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.24.0
