--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ cache:
     - hadolint --version
     - cd ${SRC_DIR}
   script:
-    - hadolint --ignore DL3018 --ignore DL3006 --ignore DL3003 --ignore DL3013 --ignore DL3007 --ignore DL3002 --ignore DL3008 --ignore DL3042 --ignore DL3016 Dockerfile
+    - hadolint Dockerfile
 
 ### Semantic release
 .semantic-release: &semantic-release
