--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ cache:
     - coverage run -m pytest
     - coverage report -m
   after_script:
-    - coveralls
+    - if [ -z "$COVERALLS_REPO_TOKEN" ]; then echo "Skipping coverall tests as this is a MR from a forked repository\n"; else coveralls;fi
   artifacts:
     when: always
     reports:
